<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Instructions1Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="630dp"
        android:layout_height="168dp"
        android:background="@drawable/header2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="429dp"
        android:layout_height="182dp"
        android:background="@drawable/footer2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/number1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGreeting1"
        android:layout_width="293dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:paddingTop="5sp"
        android:text="@string/textIntroduction1"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGreeting2"
        android:layout_width="355dp"
        android:layout_height="63dp"
        android:layout_marginTop="3dp"
        android:text="@string/textIntroduction2"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreeting1" />

    <ImageView
        android:id="@+id/imageViewMap"
        android:layout_width="match_parent"
        android:layout_height="499dp"
        android:layout_marginTop="36dp"
        android:paddingTop="20dp"
        android:src="@drawable/map"
        app:layout_constraintBottom_toTopOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreeting2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNext1"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:iconSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAdv1"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:text="@string/textIntroduction3"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>