<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewArquetipos"
            android:layout_width="463dp"
            android:layout_height="165dp"
            android:layout_marginTop="188dp"
            android:paddingTop="20dp"
            android:src="@drawable/arquetipos_personajes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewOption1"
            android:layout_width="344dp"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:text="@string/textIntroduction9"
            android:textAlignment="center"
            android:textColor="@color/textGrayDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewArquetipos" />

        <Button
            android:id="@+id/buttonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/btn_facebook"
            android:textSize="18sp"
            app:backgroundTint="@color/blueFacebook"
            app:icon="@drawable/ic_facebook"
            app:iconSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOption1" />

        <Button
            android:id="@+id/buttonGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_google"
            android:textSize="18sp"
            app:backgroundTint="@color/redGoogle"
            app:icon="@drawable/ic_google"
            app:iconSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFacebook"
            app:layout_constraintVertical_bias="0.144" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>